syntax = "proto3";

package v1;

option go_package = "github.com/ehsaaniqbal/dixdb;dixdb";

// response codes
// 0 -> OK
message StatusResponse {
    int32 status = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message DeleteRequest {
    string key = 1;
}

service DbService {
    rpc Set(SetRequest) returns (StatusResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (StatusResponse);
}
